# Time

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LICENSE.md  README.md  SECURITY.md  config.py  environment.yml  production_roadmap.md  test.py  time_analysis.py  time_gui.py  time_tracker.py
.github/workflows/: ci.yml
Main/: config.py  time_analysis.py  time_gui.py  time_plots.py  time_tracker.py
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/scripts/: capture_screenshots.mjs
dashboard/src/: App.tsx  index.css
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: database.rs  lib.rs
dashboard/src-tauri/windows/: installer-hooks.nsh
dashboard/src/components/: ActivityCalendar.tsx  DateRangePicker.tsx  EChart.tsx  HourlyActivityChart.tsx  MonthCalendarChart.tsx  ProductiveHoursChart.test.ts  ui.tsx  (+4 more)
docs/: apps.md  beta-invite.md  clean-vm-release-checklist.md  overview.md  restore.md  settings.md  signing.md  trends.md
scripts/: build_tracker.py  check_db_anomalies.py  make_demo_db.py  migrate_samples.py  verify_release.ps1
scripts/tests/: test_check_db_anomalies.py  test_demo_db.py  test_migrate.py
tracker/: config.py  db.py  domains.py  requirements-build.txt  requirements-dev.txt  requirements.txt  session_manager.py  time_tracker.spec  tracker.py  tray.py  win32_probe.py
tracker/tests/: test_contract.py  test_db.py  test_domains.py  test_logging.py  test_session_manager.py
(+58 files in other folders)
